Integrate link to code quality test results